# Pers-MS-OpenAI

./: .cursorignore  .gitignore  .vercelignore  Azure_deployment.md  Azure_integation.md  README.md  ROADMAP.md  agents.md  app.py  emails_20250512.jsonl  list_onedrive_emails.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  responses_file_search_example.py  results.json  run_document_tests.py  run_email_tests.py  setup.ps1  setup.sh  startup.sh  test_manual_upload.txt  test_openai_key.py  vercel.json
.archive/: app.py  auth.py  data_access.py  graph_client.py  graph_ingest.py  ingest.py  intent_classifier.py  onedrive_ingest.py  openai_service.py  vectorstore_upload.py  vectorstore_upload_example.py
.azure/: config
actions/: auth_actions.py  data_actions.py
api/: index.py  requirements.txt  vercel_entry.py
config/: File Structure.md  config.example.yaml  config.yaml  paths.py  secrets.json.template  secrets.md  secrets.py
core/: __init__.py  auth.py  config.py  data_access.py  file_processor.py  graph_client.py  graph_ingest.py  ingest.py  intent_classifier.py  models.py  onedrive_ingest.py  openai_service.py  response_formatter.py  vectorstore_list_files.py
data/: emails_20250513.jsonl  intent_classifier_model.joblib  intent_training_data.csv  intent_vectorizer.joblib  vectorstore_metadata.csv
docs/: CustomGPT & Responses API.md  OpenAI Python SDK.md  OpenAI Responses SDK.md  OpenAI Agents SDK.md  ROADMAP.md  TODO.md  USER_GUIDE.md  action_items.md  api_examples.md  architecture.md  design_decisions.md  openapi.json  rag_patterns.md
(+101 files in other folders)
